--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "nodemon server.js -w server.js",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
+    "koa": "^2.11.0",
+    "koa-router": "^8.0.8",
     "next": "9.3.6",
+    "nodemon": "^2.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   }
